--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "echarts": "^5.6.0",
-    "vue": "^3.5.13"
+    "echarts-countries-js": "^1.0.5",
+    "element-plus": "^2.10.2",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
