--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "echarts": "^5.6.0",
     "echarts-countries-js": "^1.0.5",
     "element-plus": "^2.10.2",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
+    "mapbox-gl": "^3.13.0",
+    "pinia": "^3.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
