--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.6.0",
     "echarts-countries-js": "^1.0.5",
     "element-plus": "^2.10.2",
+    "gsap": "^3.13.0",
     "lodash-es": "^4.17.21",
     "pinia": "^3.0.3",
     "vue": "^3.5.13",
