--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "lodash-es": "^4.17.21",
     "pinia": "^3.0.3",
     "qs": "^6.14.0",
+    "unplugin-auto-import": "^19.3.0",
+    "unplugin-vue-components": "^28.8.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "sass": "^1.89.2",
     "sass-embedded": "^1.89.2",
+    "sass-loader": "^16.0.5",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
