--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.6.0",
     "echarts-countries-js": "^1.0.5",
     "element-plus": "^2.10.3",
+    "file-saver": "^2.0.5",
     "gsap": "^3.13.0",
     "lodash-es": "^4.17.21",
     "pinia": "^3.0.3",
@@ -21,7 +22,8 @@
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.8.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
