--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "aos": "^2.3.4",
     "axios": "^1.10.0",
     "echarts": "^5.6.0",
     "echarts-countries-js": "^1.0.5",
